language/move-lang/tests/move_check/parser/expr_unary_negation.exp
error: 

   ┌── tests/move_check/parser/expr_unary_negation.move:5:31 ───
   │
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                               ^ Unexpected '-'
   ·
 5 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                               - Expected an expression term
   │

